# kamery

./: .env.example  .gitignore  AGENTS.md  INSTALL_FFMPEG_LUKOW.bat  INSTALL_LUKOW.bat  LUKOW_README.md  README.md  SKANUJ_NVR_LUKOW.bat  START_NVR_LUKOW.bat  START_PANEL_LUKOW.bat  STOP_PANEL_LUKOW.bat  TEST_DIRECT_LUKOW.bat  TEST_STABILITY_LUKOW.bat  TEST_STREAMY_LUKOW.bat  UPDATE_LUKOW.bat  cameras.example.yml  docker-compose.yml  go2rtc.example.yaml  pyproject.toml  secrets.local.example.env
docs/: architecture.md  backend.md  camera-probe.md  ezviz-rtsp-onvif.md  frigate.md  frontend.md  go2rtc.md  live-smoke-test.md  networking.md  nvr.md  probe-import.md  ptz.md  real-camera-test.md  root-cause-stream-lab.md  security.md  storage-sizing.md  troubleshooting-streams.md
scripts/: create_lukow_package.ps1  diagnose_docker.ps1  diagnose_streams.ps1  go2rtc_logs_sanitized.ps1  go2rtc_logs_sanitized.sh  install_ffmpeg_lukow.ps1  lukow_common.ps1  root_cause_stream_lab.ps1  run_backend_lukow.ps1  run_frontend_lukow.ps1  run_probe.ps1  run_probe.sh  scan_nvr_lukow.ps1  setup_lukow.ps1  stability_lukow.ps1  start_lukow_panel.ps1  stop_lukow_panel.ps1  test_browser_decode.md  test_direct_camera_stream.ps1  test_go2rtc_stream.ps1  test_network_quality.ps1  test_recorder_impact.ps1  test_streamy_lukow.ps1  update_from_github.ps1
tests/: test_backend_api.py  test_backend_importer.py  test_bootstrap_probe_import.py  test_config.py  test_ffprobe.py  test_frigate.py  test_frigate_cli.py  test_go2rtc_health.py  test_go2rtc_log_sanitizer.py  test_go2rtc_runtime.py  test_masking.py  (+6 more)
(+50 files in other folders)
