[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ezviz-panel"
version = "0.1.0"
description = "Local EZVIZ camera panel tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.0",
    "onvif-zeep>=0.2.12",
    "PyJWT>=2.13.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
camera-probe = "ezviz_panel.camera_probe.cli:main"
ezviz-backend = "ezviz_panel.backend.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
